@@ -136,17 +136,15 @@ class LayoutPolicy(BrowserView):
         portal_state = getMultiAdapter(
             (context, self.request), name=u'plone_portal_state')
         normalizer = queryUtility(IIDNormalizer)
+        body_class = ''
 
         # template class (required)
-        name = ''
-        if isinstance(template, ViewPageTemplateFile) or \
-           isinstance(template, ZopeViewPageTemplateFile):
-            # Browser view
-            name = view.__name__
-        else:
+        name = getattr(view, '__name__', None)
+        if name is None and hasattr(template, 'getId'):
             name = template.getId()
-        name = normalizer.normalize(name)
-        body_class = 'template-%s' % name
+        if name:
+            name = normalizer.normalize(name)
+            body_class += 'template-%s' % name
 
         # portal type class (optional)
         portal_type = normalizer.normalize(context.portal_type)
